--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ section { scroll-margin-top: 80px; }
         <div class="date">arXiv 2025 (Preprint)</div>
         <div class="description">
           <strong><a href="https://arxiv.org/abs/2509.06511">Predicting brain tumor response to therapy using a hybrid deep learning and radiomics approach.</a></strong>
-          <div class="authors"><strong>Banerjee M.</strong>, D. Tikhonov, M. F. Scatolin, et al.</div>
+          <div class="authors">D. Tikhonov, M. F. Scatolin, <strong>Banerjee M.</strong> et al.</div>
           <div>Preprint on arXiv.</div>
         </div>
       </div>
@@ -436,7 +436,7 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">URECA@NTU 2024-25 (In press)</div>
         <div class="description">
-          <strong><a href="https://doi.org/10.13140/RG.2.2.32833.62568">Fact or fiction: Can truth kill creativity?</a></strong>
+          <strong><a href="https://doi.org/10.13140/RG.2.2.32833.62568">Fact or fiction: Can Truth Kill Creativity?</a></strong>
           <div class="authors"><strong>Banerjee M.</strong>, A. G. W. Chan</div>
           <div>NTU internal repository.</div>
         </div>
@@ -446,8 +446,8 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">ICLR 2025 Workshop</div>
         <div class="description">
-          <strong><a href="https://openreview.net/forum?id=hocpzqMqB5">Automating evaluation of creativity in LLMs with semantic entropy and multi-agent judge.</a></strong>
-          <div class="authors"><strong>Banerjee M.</strong>, M. S. Tan, Z. Choy, et al.</div>
+          <strong><a href="https://openreview.net/forum?id=hocpzqMqB5">Automating Evaluation of Creativity in LLMs with Semantic Entropy and Efficient Multi-Agent Judge</a></strong>
+          <div class="authors">, M. S. Tan, Z. Choy, <strong>Banerjee M.</strong>et al.</div>
           <div>Workshop paper.</div>
         </div>
       </div>
@@ -476,7 +476,7 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">ICUR 2024</div>
         <div class="description">
-          <strong><a href="https://doi.org/10.13140/RG.2.2.25113.48480">Advanced control strategy for motor drives using neural network algorithm.</a></strong>
+          <strong><a href="https://doi.org/10.13140/RG.2.2.25113.48480">Advanced Control Strategy for Motor Drives Using Neural Network Algorithm</a></strong>
           <div class="authors"><strong>Banerjee M.</strong>, C. Zhao, C. H. T. Lee</div>
           <div>Orally presented at ICUR 2024.</div>
         </div>
