--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">DCASE 2025 (In press)</div>
         <div class="description">
-          <strong>Exploiting stereo spatial properties with ReCoOP framework for joint sound event detection and localization.</strong>
+          <strong>Exploiting Stereo Spatial Properties with ReCoOP Framework for joint Sound Event Detection and Localization.</strong>
           <div class="authors"><strong>Banerjee M.</strong>, S. Nagisetty, H. B. Teo</div>
           <div>DCASE 2025 Workshop.</div>
         </div>
@@ -426,7 +426,7 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">arXiv 2025 (Preprint)</div>
         <div class="description">
-          <strong><a href="https://arxiv.org/abs/2509.06511">Predicting brain tumor response to therapy using a hybrid deep learning and radiomics approach.</a></strong>
+          <strong><a href="https://arxiv.org/abs/2509.06511">Predicting Brain Tumor Response to Therapy using a Hybrid Deep Learning and Radiomics Approach</a></strong>
           <div class="authors">D. Tikhonov, M. F. Scatolin, <strong>Banerjee M.</strong> et al.</div>
           <div>Preprint on arXiv.</div>
         </div>
@@ -447,7 +447,7 @@ section { scroll-margin-top: 80px; }
         <div class="date">ICLR 2025 Workshop</div>
         <div class="description">
           <strong><a href="https://openreview.net/forum?id=hocpzqMqB5">Automating Evaluation of Creativity in LLMs with Semantic Entropy and Efficient Multi-Agent Judge</a></strong>
-          <div class="authors">, M. S. Tan, Z. Choy, <strong>Banerjee M.</strong>et al.</div>
+          <div class="authors">M. S. Tan, Z. Choy, <strong>Banerjee M.</strong>et al.</div>
           <div>Workshop paper.</div>
         </div>
       </div>
@@ -466,7 +466,7 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">Research Square 2024 (Preprint)</div>
         <div class="description">
-          <strong>Enhancing Urban Mobility through Adaptive Traffic Analysis: A Case Study in Singapore</strong>
+          <strong><a href="https://doi.org/10.21203/rs.3.rs-4591616/v1">Enhancing Urban Mobility through Adaptive Traffic Analysis: A Case Study in Singapore</strong>
           <div class="authors"><strong>Banerjee M.</strong>, A. C. Somasundaram, R. Pahwa, et al.</div>
           <div>Preprint publication.</div>
         </div>
