--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@ section { scroll-margin-top: 80px; }
         <div class="date">May 2024 – Jul 2024</div>
         <div class="description">
           <strong>Data Engineering Intern — Seatrium</strong>
-          <div>Built full-stack data platform for 15 shipyards. Co-designed ETL workflow for global operations.</div>
+          <div>Built a full-stack data collection and visualization platform (React, Node.js, PostgreSQL) for 15 global Seatrium yards. Co-designed ETL workflow for global operations.</div>
         </div>
       </div>
     </li>
@@ -520,7 +520,8 @@ section { scroll-margin-top: 80px; }
         <div class="date">Dec 2023</div>
         <div class="description">
           <strong>AI Intern — Teleskop.Tech</strong>
-          <div>Reviewed 100+ sources to guide LLM-based customer finance chatbot development.</div>
+          <div>Studied open-source LLMs for a customer finance chatbot and reviewed about 100 academic articles and industry perspectives to guide
+its features and relevance.</div>
         </div>
       </div>
     </li>
@@ -535,7 +536,8 @@ section { scroll-margin-top: 80px; }
         <div class="date">Aug 2024 – Oct 2024</div>
         <div class="description">
           <strong>SOPPU — Scalable One PEFT per User (Alibaba Global Challenge)</strong>
-          <div>Built per-user LoRA adapters with RAG (Qwen2, ChromaDB, LangChain); scaled to 500+ adapters via SVD/joint compression.</div>
+          <div>Proposed SOPPU for chatbot personalization using per-user LoRA adapters and implemented RAG with Qwen2, ChromaDB, Unsloth,
+LangChain and user profiles. Scaled to 500+ adapters via SVD/joint compression.</div>
         </div>
       </div>
     </li>
@@ -544,7 +546,8 @@ section { scroll-margin-top: 80px; }
         <div class="date">Mar 2024</div>
         <div class="description">
           <strong>ATLAS — Adaptive Traffic Learning & Analysis System (NUS Hackathon)</strong>
-          <div>Built OSM→SUMO pipeline; automated traffic analytics; congestion insights via Llama2 + ChromaDB.</div>
+          <div>Converted OpenStreetMap data to SUMO-compatible XML for traffic simulations and automated traffic flow analysis using Python scripts
+(mean, std dev from SUMO output), congestion insights via Llama2 + ChromaDB.</div>
         </div>
       </div>
     </li>
