--- a/index.html
+++ b/index.html
@@ -489,39 +489,58 @@ section { scroll-margin-top: 80px; }
   <h2>Internships</h2>
   <ul class="list">
     <li>
+      <div class="publication-thumbnail"></div>
       <div class="publication-text">
         <div class="date">Jan 2025 – May 2025</div>
         <div class="description">
           <strong>AI Engineer Intern — Panasonic R&D Center</strong>
-          <div>Led ReCOOP framework for SELD (DCASE 2025 Task 3, 3rd globally). Developed dysarthric speech detection system with real-time Streamlit deployment.</div>
+          <p>
+            Built <em>ReCoOP</em>, a stereo SELD system that ranked <strong>3rd worldwide</strong> at DCASE 2025. 
+            Also developed a Wav2Vec2-based dysarthric-speech detector with a Streamlit app for real-time demos. 
+            <a href="#">[GitHub: ReCoOP]</a> <a href="#">[GitHub: Speech]</a>
+          </p>
         </div>
       </div>
     </li>
+
     <li>
+      <div class="publication-thumbnail"></div>
       <div class="publication-text">
         <div class="date">May 2024 – Jul 2024</div>
         <div class="description">
           <strong>Data Engineering Intern — Seatrium</strong>
-          <div>Built a full-stack data collection and visualization platform (React, Node.js, PostgreSQL) for 15 global Seatrium yards. Co-designed ETL workflow for global operations.</div>
+          <p>
+            Created a full-stack data platform (React, Node.js, PostgreSQL) for <strong>15 shipyards</strong>, 
+            cutting manual errors and standardizing ETL pipelines. <a href="#">[GitHub]</a>
+          </p>
         </div>
       </div>
     </li>
+
     <li>
+      <div class="publication-thumbnail"></div>
       <div class="publication-text">
         <div class="date">Mar 2024 – Apr 2024</div>
         <div class="description">
-          <strong>Project — Bosch (NTU VeNTUre)</strong>
-          <div>Designed hybrid recommender system using NLP and clustering for personalized recipe suggestions.</div>
+          <strong>NTU veNTUre × Bosch Project</strong>
+          <p>
+            Collaborated with Bosch on <em>appliance user behavior modeling</em>, 
+            turning telemetry into user sessions and proposing schemas for personalization and analytics.
+          </p>
         </div>
       </div>
     </li>
+
     <li>
+      <div class="publication-thumbnail"></div>
       <div class="publication-text">
         <div class="date">Dec 2023</div>
         <div class="description">
           <strong>AI Intern — Teleskop.Tech</strong>
-          <div>Studied open-source LLMs for a customer finance chatbot and reviewed about 100 academic articles and industry perspectives to guide
-its features and relevance.</div>
+          <p>
+            Studied open-source LLMs for a finance chatbot and distilled insights from ~100 sources 
+            into feature recommendations for product design.
+          </p>
         </div>
       </div>
     </li>
@@ -532,36 +551,63 @@ its features and relevance.</div>
   <h2>Projects</h2>
   <ul class="list">
     <li>
+      <div class="publication-thumbnail"></div>
       <div class="publication-text">
         <div class="date">Aug 2024 – Oct 2024</div>
         <div class="description">
-          <strong>SOPPU — Scalable One PEFT per User (Alibaba Global Challenge)</strong>
-          <div>Proposed SOPPU for chatbot personalization using per-user LoRA adapters and implemented RAG with Qwen2, ChromaDB, Unsloth,
-LangChain and user profiles. Scaled to 500+ adapters via SVD/joint compression.</div>
+          <strong>SOPPU — Scalable One PEFT per User (Alibaba Challenge)</strong>
+          <p>
+            Built a personalization framework with per-user LoRA adapters and RAG (Qwen2 + ChromaDB). 
+            Scaled to <strong>500+ adapters</strong> using compression while halving storage. <a href="#">[GitHub]</a>
+          </p>
         </div>
       </div>
     </li>
+
     <li>
+      <div class="publication-thumbnail"></div>
       <div class="publication-text">
         <div class="date">Mar 2024</div>
         <div class="description">
-          <strong>ATLAS — Adaptive Traffic Learning & Analysis System (NUS Hackathon)</strong>
-          <div>Converted OpenStreetMap data to SUMO-compatible XML for traffic simulations and automated traffic flow analysis using Python scripts
-(mean, std dev from SUMO output), congestion insights via Llama2 + ChromaDB.</div>
+          <strong>ATLAS — Adaptive Traffic Learning & Analysis System</strong>
+          <p>
+            Developed an OSM→SUMO pipeline for traffic simulations with automated analytics 
+            and a Llama model that explained congestion patterns. <a href="#">[GitHub]</a>
+          </p>
         </div>
       </div>
     </li>
+
     <li>
+      <div class="publication-thumbnail"></div>
       <div class="publication-text">
         <div class="date">Jan 2024 – Apr 2024</div>
         <div class="description">
           <strong>CROSS BORDER — Full-Stack Web Application</strong>
-          <div>Developed migrant support platform with React/Node/MongoDB/AWS S3; integrated APIs and chatbot; IEEE-style SRS.</div>
+          <p>
+            Built a platform for <strong>migrant workers in Singapore</strong> with maps, currency, and chat support. 
+            Implemented using React/Node, MongoDB, AWS S3, and multiple APIs. <a href="#">[GitHub]</a>
+          </p>
         </div>
       </div>
     </li>
+
     <li>
+      <div class="publication-thumbnail"></div>
+      <div class="publication-text">
+        <div class="date">Sep 2023 – Nov 2023</div>
+        <div class="description">
+          <strong>Camp Management System — OOP (Java)</strong>
+          <p>
+            Created a secure, role-based system for <strong>500+ users</strong> with login, session handling, 
+            and modular OOP design. <a href="#">[GitHub]</a>
+          </p>
+        </div>
+      </div>
+    </li>
+  </ul>
 </section>
+
 
       
     </main>
