--- a/index.html
+++ b/index.html
@@ -491,13 +491,13 @@ section { scroll-margin-top: 80px; }
     <li>
       <div class="publication-thumbnail"></div>
       <div class="publication-text">
-        <div class="date">Jan 2025 – May 2025</div>
+        <div class="date">Jan 2025 - May 2025</div>
         <div class="description">
-          <strong>AI Engineer Intern — Panasonic R&D Center</strong>
+          <strong>AI Engineer Intern - Panasonic R&D Center</strong>
           <p>
-            Built <em>ReCoOP</em>, a stereo SELD system that ranked <strong>3rd worldwide</strong> at DCASE 2025. 
+            Built ReCoOP, a stereo SELD system that ranked 3rd globally at DCASE 2025. 
             Also developed a Wav2Vec2-based dysarthric-speech detector with a Streamlit app for real-time demos. 
-            <a href="#">[GitHub: ReCoOP]</a> <a href="#">[GitHub: Speech]</a>
+            <a href="https://github.com/mohrsalt/SELD_For_Stereo_Audio">[GitHub: ReCoOP]</a> <a href="https://github.com/mohrsalt/Dysarthric_Speech_Detection">[GitHub: Dysarthric Speech Detection]</a>
           </p>
         </div>
       </div>
@@ -506,12 +506,12 @@ section { scroll-margin-top: 80px; }
     <li>
       <div class="publication-thumbnail"></div>
       <div class="publication-text">
-        <div class="date">May 2024 – Jul 2024</div>
+        <div class="date">May 2024 - Jul 2024</div>
         <div class="description">
-          <strong>Data Engineering Intern — Seatrium</strong>
+          <strong>Data Engineering Intern - Seatrium</strong>
           <p>
-            Created a full-stack data platform (React, Node.js, PostgreSQL) for <strong>15 shipyards</strong>, 
-            cutting manual errors and standardizing ETL pipelines. <a href="#">[GitHub]</a>
+            Created a full-stack data platform (React, Node.js, PostgreSQL) for 15 shipyards, 
+            cutting manual errors and standardizing ETL pipelines. <a href="https://github.com/mohrsalt/SummerIntern">[GitHub]</a>
           </p>
         </div>
       </div>
@@ -520,12 +520,12 @@ section { scroll-margin-top: 80px; }
     <li>
       <div class="publication-thumbnail"></div>
       <div class="publication-text">
-        <div class="date">Mar 2024 – Apr 2024</div>
+        <div class="date">Mar 2024 - Apr 2024</div>
         <div class="description">
           <strong>NTU veNTUre × Bosch Project</strong>
           <p>
-            Collaborated with Bosch on <em>appliance user behavior modeling</em>, 
-            turning telemetry into user sessions and proposing schemas for personalization and analytics.
+        Built a hybrid recipe recommender using NLP and a two-tower model. 
+        Applied PCA and K-Means clustering to group recipes and deliver personalized suggestions.
           </p>
         </div>
       </div>
@@ -536,7 +536,7 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">Dec 2023</div>
         <div class="description">
-          <strong>AI Intern — Teleskop.Tech</strong>
+          <strong>AI Intern - Teleskop.Tech</strong>
           <p>
             Studied open-source LLMs for a finance chatbot and distilled insights from ~100 sources 
             into feature recommendations for product design.
@@ -553,12 +553,12 @@ section { scroll-margin-top: 80px; }
     <li>
       <div class="publication-thumbnail"></div>
       <div class="publication-text">
-        <div class="date">Aug 2024 – Oct 2024</div>
+        <div class="date">Aug 2024 - Oct 2024</div>
         <div class="description">
-          <strong>SOPPU — Scalable One PEFT per User (Alibaba Challenge)</strong>
+          <strong>SOPPU - Scalable One PEFT per User (Alibaba Challenge)</strong>
           <p>
             Built a personalization framework with per-user LoRA adapters and RAG (Qwen2 + ChromaDB). 
-            Scaled to <strong>500+ adapters</strong> using compression while halving storage. <a href="#">[GitHub]</a>
+            Scaled to 500+ adapters using compression while halving storage. <a href="https://github.com/mohrsalt/DAI-SOPPU">[GitHub]</a>
           </p>
         </div>
       </div>
@@ -569,10 +569,10 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">Mar 2024</div>
         <div class="description">
-          <strong>ATLAS — Adaptive Traffic Learning & Analysis System</strong>
+          <strong>ATLAS - Adaptive Traffic Learning & Analysis System</strong>
           <p>
             Developed an OSM→SUMO pipeline for traffic simulations with automated analytics 
-            and a Llama model that explained congestion patterns. <a href="#">[GitHub]</a>
+            and a Llama model that explained congestion patterns. <a href="https://github.com/mohrsalt/ATLAS">[GitHub]</a>
           </p>
         </div>
       </div>
@@ -581,12 +581,12 @@ section { scroll-margin-top: 80px; }
     <li>
       <div class="publication-thumbnail"></div>
       <div class="publication-text">
-        <div class="date">Jan 2024 – Apr 2024</div>
+        <div class="date">Jan 2024 - Apr 2024</div>
         <div class="description">
-          <strong>CROSS BORDER — Full-Stack Web Application</strong>
+          <strong>CROSS BORDER - Full-Stack Web Application</strong>
           <p>
-            Built a platform for <strong>migrant workers in Singapore</strong> with maps, currency, and chat support. 
-            Implemented using React/Node, MongoDB, AWS S3, and multiple APIs. <a href="#">[GitHub]</a>
+            Built a platform for migrant workers in Singapore with maps, currency, and chat support. 
+            Implemented using React/Node, MongoDB, AWS S3, and multiple APIs. <a href="https://github.com/mohrsalt/SC2006-CROSS-BORDER">[GitHub]</a>
           </p>
         </div>
       </div>
@@ -595,12 +595,12 @@ section { scroll-margin-top: 80px; }
     <li>
       <div class="publication-thumbnail"></div>
       <div class="publication-text">
-        <div class="date">Sep 2023 – Nov 2023</div>
+        <div class="date">Sep 2023 - Nov 2023</div>
         <div class="description">
-          <strong>Camp Management System — OOP (Java)</strong>
+          <strong>Camp Management System - OOP (Java)</strong>
           <p>
-            Created a secure, role-based system for <strong>500+ users</strong> with login, session handling, 
-            and modular OOP design. <a href="#">[GitHub]</a>
+            Created a secure, role-based system for 500+ users with login, session handling, 
+            and modular OOP design. <a href="https://github.com/mohrsalt/SC2002-CAMS">[GitHub]</a>
           </p>
         </div>
       </div>
