--- a/index.html
+++ b/index.html
@@ -495,9 +495,9 @@ section { scroll-margin-top: 80px; }
         <div class="description">
           <strong>AI Engineer Intern - Panasonic R&D Center</strong>
           <p>
-            Built ReCoOP, a stereo SELD system that ranked 3rd globally at DCASE 2025. 
+            Built ReCoOP, a stereo SELD system that ranked 3rd globally at DCASE 2025. <a href="https://github.com/mohrsalt/SELD_For_Stereo_Audio">[GitHub: ReCoOP]</a><br>
             Also developed a Wav2Vec2-based dysarthric-speech detector with a Streamlit app for real-time demos. 
-            <a href="https://github.com/mohrsalt/SELD_For_Stereo_Audio">[GitHub: ReCoOP]</a> <a href="https://github.com/mohrsalt/Dysarthric_Speech_Detection">[GitHub: Dysarthric Speech Detection]</a>
+             <a href="https://github.com/mohrsalt/Dysarthric_Speech_Detection">[GitHub: Dysarthric Speech Detection]</a>
           </p>
         </div>
       </div>
