--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ section { scroll-margin-top: 80px; }
   <h2>Internships</h2>
   <ul class="list">
     <li>
-      <div class="publication-thumbnail"></div>
+      <div class="publication-thumbnail"> <img src="images/seld.png" alt="SELD"> </div>
       <div class="publication-text">
         <div class="date">Jan 2025 - May 2025</div>
         <div class="description">
@@ -504,7 +504,7 @@ section { scroll-margin-top: 80px; }
     </li>
 
     <li>
-      <div class="publication-thumbnail"></div>
+      <div class="publication-thumbnail"><img src="images/ship.png" alt="Form"></div>
       <div class="publication-text">
         <div class="date">May 2024 - Jul 2024</div>
         <div class="description">
@@ -518,7 +518,7 @@ section { scroll-margin-top: 80px; }
     </li>
 
     <li>
-      <div class="publication-thumbnail"></div>
+      <div class="publication-thumbnail"><img src="images/twotower.png" alt="Recommender"></div>
       <div class="publication-text">
         <div class="date">Mar 2024 - Apr 2024</div>
         <div class="description">
@@ -532,7 +532,7 @@ section { scroll-margin-top: 80px; }
     </li>
 
     <li>
-      <div class="publication-thumbnail"></div>
+      <div class="publication-thumbnail"><img src="images/personal_fin.png" alt="Personal Finance"></div>
       <div class="publication-text">
         <div class="date">Dec 2023</div>
         <div class="description">
