--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">May 2024 - Jul 2024</div>
         <div class="description">
-          <strong>Data Engineering Intern - Seatrium</strong>
+          <strong>Data Engineer Intern - Seatrium</strong>
           <p>
             Created a full-stack data platform (React, Node.js, PostgreSQL) for 15 shipyards, 
             cutting manual errors and standardizing ETL pipelines. <a href="https://github.com/mohrsalt/SummerIntern">[GitHub]</a>
@@ -575,7 +575,7 @@ section { scroll-margin-top: 80px; }
           <strong>SOPPU - Scalable One PEFT per User (Alibaba Challenge)</strong>
           <p>
             Built a personalization framework with per-user LoRA adapters and RAG (Qwen2 + ChromaDB). 
-            Scaled to 500+ adapters using compression while halving storage. <a href="https://github.com/mohrsalt/DAI-SOPPU">[GitHub]</a>
+            Scaled using compression to halve storage. <a href="https://github.com/mohrsalt/DAI-SOPPU">[GitHub]</a>
           </p>
         </div>
       </div>
@@ -588,8 +588,12 @@ section { scroll-margin-top: 80px; }
         <div class="description">
           <strong>ATLAS - Adaptive Traffic Learning & Analysis System</strong>
           <p>
-            Developed an OSM→SUMO pipeline for traffic simulations with automated analytics 
-            and a Llama model that explained congestion patterns. <a href="https://github.com/mohrsalt/ATLAS">[GitHub]</a>
+            <p>
+  Built a pipeline that converted OpenStreetMap data into SUMO traffic simulations, 
+  added automated flow analytics, and used a Llama model to explain congestion 
+  hotspots in plain language.
+</p>
+ <a href="https://github.com/mohrsalt/ATLAS">[GitHub]</a>
           </p>
         </div>
       </div>
@@ -603,7 +607,7 @@ section { scroll-margin-top: 80px; }
           <strong>CROSS BORDER - Full-Stack Web Application</strong>
           <p>
             Built a platform for migrant workers in Singapore with maps, currency, and chat support. 
-            Implemented using React/Node, MongoDB, AWS S3, and multiple APIs. <a href="https://github.com/mohrsalt/SC2006-CROSS-BORDER">[GitHub]</a>
+            Implemented using React/Node, MongoDB, AWS S3, and multiple external APIs. <a href="https://github.com/mohrsalt/SC2006-CROSS-BORDER">[GitHub]</a>
           </p>
         </div>
       </div>
