--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">Aug 2024 - Oct 2024</div>
         <div class="description">
-          <strong>SOPPU - Scalable One PEFT per User (Alibaba Challenge)</strong>
+          <strong>SOPPU - Scalable One PEFT per User (Alibaba Global E-Commerce Challenge)</strong>
           <p>
             Built a personalization framework with per-user LoRA adapters and RAG (Qwen2 + ChromaDB). 
             Scaled using compression to halve storage. <a href="https://github.com/mohrsalt/DAI-SOPPU">[GitHub]</a>
@@ -586,7 +586,7 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">Mar 2024</div>
         <div class="description">
-          <strong>ATLAS - Adaptive Traffic Learning & Analysis System</strong>
+          <strong>ATLAS - Adaptive Traffic Learning & Analysis System (NUS-NCS Innovation Challenge)</strong>
           <p>
             <p>
   Built a pipeline that converted OpenStreetMap data into SUMO traffic simulations, 
@@ -618,7 +618,7 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">Sep 2023 - Nov 2023</div>
         <div class="description">
-          <strong>Camp Management System - OOP (Java)</strong>
+          <strong>Camp Management System - OOP</strong>
           <p>
             Created a secure, role-based system for 500+ users with login, session handling, 
             and modular OOP design. <a href="https://github.com/mohrsalt/SC2002-CAMS">[GitHub]</a>
