--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@ section { scroll-margin-top: 80px; }
   <h2>Projects</h2>
   <ul class="list">
     <li>
-      <div class="publication-thumbnail"></div>
+      <div class="publication-thumbnail"><img src="images/shopchat.png" alt="SOPPU"></div>
       <div class="publication-text">
         <div class="date">Aug 2024 - Oct 2024</div>
         <div class="description">
@@ -582,7 +582,7 @@ section { scroll-margin-top: 80px; }
     </li>
 
     <li>
-      <div class="publication-thumbnail"></div>
+      <div class="publication-thumbnail"><img src="images/atlas.png" alt="ATLAS"></div>
       <div class="publication-text">
         <div class="date">Mar 2024</div>
         <div class="description">
@@ -600,7 +600,7 @@ section { scroll-margin-top: 80px; }
     </li>
 
     <li>
-      <div class="publication-thumbnail"></div>
+      <div class="publication-thumbnail"><img src="images/crossb.png" alt="CROSS BORDER"></div>
       <div class="publication-text">
         <div class="date">Jan 2024 - Apr 2024</div>
         <div class="description">
@@ -614,7 +614,7 @@ section { scroll-margin-top: 80px; }
     </li>
 
     <li>
-      <div class="publication-thumbnail"></div>
+      <div class="publication-thumbnail"><img src="images/cams.png" alt="CAMS"></div>
       <div class="publication-text">
         <div class="date">Sep 2023 - Nov 2023</div>
         <div class="description">
