--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ section { scroll-margin-top: 80px; }
         <div class="date">Proceedings of the MICCAI 2025 BraTS Challenge</div>
         <div class="description">
           <strong><a href="https://arxiv.org/abs/2507.23256">EMedNeXt: An Enhanced Brain Tumor Segmentation Framework for Sub-Saharan Africa using MedNeXt V2 with Deep Supervision.</a></strong>
-          <div class="authors">A. Jaheen, A. Elsayed, <strong>Banerjee M.</strong>, et al.</div>
+          <div class="authors">A. Jaheen, A. Elsayed, Kim, D., <strong>Banerjee M.</strong>, et al.</div>
          
         </div>
       </div>
@@ -456,7 +456,7 @@ section { scroll-margin-top: 80px; }
 2024-25</div>
         <div class="description">
           <strong><a href="https://doi.org/10.13140/RG.2.2.32833.62568">Fact or fiction: Can Truth Kill Creativity?</a></strong>
-          <div class="authors"><strong>Banerjee M.</strong>, A. G. W. Chan</div>
+          <div class="authors"><strong>Banerjee M.</strong>, Alsagoff, S. A. R., A. G. W. Chan</div>
           
         </div>
       </div>
