--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ section { scroll-margin-top: 80px; }
         <div class="date">Proceedings of the URECA@NTU
 2024-25</div>
         <div class="description">
-          <strong><a href="https://doi.org/10.13140/RG.2.2.32833.62568">Fact or fiction: Can Truth Kill Creativity?</a></strong>
+          <strong><a href="https://doi.org/10.13140/RG.2.2.32833.62568">Fact or Fiction: Can Truth Kill Creativity?</a></strong>
           <div class="authors"><strong>Banerjee M.</strong>, Alsagoff, S. A. R., A. G. W. Chan</div>
           
         </div>
