--- a/index.html
+++ b/index.html
@@ -495,8 +495,7 @@ Artificial Intelligence (DAI 2024), Student Poster Track</div>
     </li>
     <li>
       <div class="publication-text">
-        <div class="date">Proceedings
-of the URECA@NTU 2023-24 (Orally presented at the International Conference of Undergraduate Research (ICUR 2024))</div>
+        <div class="date">Proceedings of the URECA@NTU 2023-24 (Orally presented at the International Conference of Undergraduate Research (ICUR 2024))</div>
         <div class="description">
           <strong><a href="https://doi.org/10.13140/RG.2.2.25113.48480">Advanced Control Strategy for Motor Drives Using Neural Network Algorithm</a></strong>
           <div class="authors"><strong>Banerjee M.</strong>, C. Zhao, C. H. T. Lee</div>
