--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ section { scroll-margin-top: 80px; }
     <li>
       <div class="publication-text">
         <div class="date">Proceedings of the Workshop on Detection and Classification of Acoustic Scenes and Events (DCASE
-2025)</div>
+2025) (in Press)</div>
         <div class="description">
           <strong>Exploiting Stereo Spatial Properties with ReCoOP Framework for joint Sound Event Detection and Localization.</strong>
           <div class="authors"><strong>Banerjee M.</strong>, S. Nagisetty, H. B. Teo</div>
@@ -487,7 +487,7 @@ Artificial Intelligence (DAI 2024), Student Poster Track</div>
       <div class="publication-text">
         <div class="date">Preprint</div>
         <div class="description">
-          <strong><a href="https://doi.org/10.21203/rs.3.rs-4591616/v1">Enhancing Urban Mobility through Adaptive Traffic Analysis: A Case Study in Singapore</strong>
+          <strong><a href="https://doi.org/10.21203/rs.3.rs-4591616/v1">Enhancing Urban Mobility through Adaptive Traffic Analysis: A Case Study in Singapore</a></strong>
           <div class="authors"><strong>Banerjee M.</strong>, A. C. Somasundaram, R. Pahwa, et al.</div>
          
         </div>
