--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ section { scroll-margin-top: 80px; }
         <div class="date">Proceedings of the Workshop on Detection and Classification of Acoustic Scenes and Events (DCASE
 2025) (in Press)</div>
         <div class="description">
-          <strong>Exploiting Stereo Spatial Properties with ReCoOP Framework for joint Sound Event Detection and Localization.</strong>
+          <strong>Exploiting Stereo Spatial Properties with ReCoOP Framework for Joint Sound Event Detection and Localization.</strong>
           <div class="authors"><strong>Banerjee M.</strong>, S. Nagisetty, H. B. Teo</div>
       
         </div>
