--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ Models, International Conference on Learning Representations (ICLR 2025)</div>
         <div class="date">Proceedings of the International Conference on Distributed
 Artificial Intelligence (DAI 2024), Student Poster Track</div>
         <div class="description">
-          <strong><a href="https://www.adai.ai/dai/2024/dai_papers/DAI2024_paper_21.pdf">SOPPU: Scalable One PEFT per User</a></strong>
+          <strong><a href="https://www.adai.ai/dai/2024/dai\_papers/DAI2024\_paper\_21.pdf">SOPPU: Scalable One PEFT per User</a></strong>
           <div class="authors"><strong>Banerjee M.</strong>, Y. Jain</div>
           
         </div>
@@ -611,7 +611,7 @@ Artificial Intelligence (DAI 2024), Student Poster Track</div>
           <strong>CROSS BORDER - Full-Stack Web Application</strong>
           <p>
             Built a platform for migrant workers in Singapore with maps, currency, and chat support. 
-            Implemented using React/Node, MongoDB, AWS S3, and multiple external APIs. <a href="https://github.com/mohrsalt/SC2006-CROSS-BORDER">[GitHub]</a>
+            Implemented using React/Node, MongoDB, AWS S3, and multiple external APIs.<a href="https://github.com/mohrsalt/SC2006-CROSS-BORDER">[GitHub]</a>
           </p>
         </div>
       </div>
