--- a/index.html
+++ b/index.html
@@ -354,6 +354,12 @@ section { scroll-margin-top: 80px; }
             <svg viewBox="0 0 24 24"><path d="M12 2C6.475 2 2 6.475 2 12a9.994 9.994 0 0 0 6.838 9.5c.5.088.687-.213.687-.475 0-.23-.012-1.025-.012-1.862-2.513.462-3.038-1.087-3.038-1.087-.45-1.137-1.1-1.437-1.1-1.437-.9-.612.063-.6.063-.6 1 .075 1.525 1.025 1.525 1.025.887 1.512 2.312 1.075 2.875.825.088-.65.35-1.075.638-1.325-2.2-.25-4.512-1.1-4.512-4.9 0-1.075.387-1.95 1.025-2.637-.1-.25-.45-1.25.1-2.6 0 0 .837-.262 2.75 1.025a9.58 9.58 0 0 1 5 0c1.912-1.3 2.75-1.025 2.75-1.025.55 1.35.2 2.35.1 2.6.637.688 1.025 1.562 1.025 2.637 0 3.812-2.312 4.65-4.525 4.9.362.312.675.912.675 1.85 0 1.337-.012 2.412-.012 2.737 0 .262.188.562.688.475A10.001 10.001 0 0 0 22 12C22 6.475 17.525 2 12 2Z"/></svg>
             GitHub
           </a>
+            <a href="https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AH8HC4xabNjPTPL5EpnUZUp16F4W0Ge5SyZ0Sqwxo4BGBRNCg3QmyHKk8tHjq9fNkQX2HtcGFZtN_yM5jjGIHg&user=oT7c6O4AAAAJ" target="_blank">
+    <svg viewBox="0 0 24 24">
+      <path d="M12 2L1 12l4 0 0 10 14 0 0-10 4 0L12 2zm0 4.828L17.172 12H14v8H10v-8H6.828L12 6.828z"/>
+    </svg>
+    Google Scholar
+  </a>
         </div>
       </div>
       <div class="header-photo">
