--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ Models, International Conference on Learning Representations (ICLR 2025)</div>
         <div class="date">Proceedings of the International Conference on Distributed
 Artificial Intelligence (DAI 2024), Student Poster Track</div>
         <div class="description">
-          <strong><a href="https://www.adai.ai/dai/2024/dai_papers/DAI2024_paper_21.pdf">SOPPU: Scalable One PEFT per User</a></strong>
+          <strong><a href="https://www.adai.ai/dai/2024/dai_papers/DAI2024_paper_21.pdf" target="_blank">SOPPU: Scalable One PEFT per User</a></strong>
           <div class="authors"><strong>Banerjee M.</strong>, Y. Jain</div>
           
         </div>
