--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7N7WB3L55E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7N7WB3L55E');
+</script>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Mohor Banerjee</title>
   
