--- a/index.html
+++ b/index.html
@@ -427,9 +427,9 @@ section { scroll-margin-top: 80px; }
     <li>
       <div class="publication-text">
         <div class="date">Proceedings of the Workshop on Detection and Classification of Acoustic Scenes and Events (DCASE
-2025) (in Press)</div>
+2025)</div>
         <div class="description">
-          <strong>Exploiting Stereo Spatial Properties with ReCoOP Framework for joint Sound Event Detection and Localization.</strong>
+          <strong><a href="https://dcase.community/documents/workshop2025/proceedings/DCASE2025Workshop_Banerjee_64.pdf">Exploiting Stereo Spatial Properties with ReCoOP Framework for joint Sound Event Detection and Localization.</a></strong>
           <div class="authors"><strong>Banerjee M.</strong>, S. Nagisetty, H. B. Teo</div>
       
         </div>
