--- a/index.html
+++ b/index.html
@@ -426,6 +426,16 @@ section { scroll-margin-top: 80px; }
   <ul class="list">
     <li>
       <div class="publication-text">
+        <div class="date">AAAI 2026 Workshop on AI for Scientific Research</div>
+        <div class="description">
+          <strong><a href="https://openreview.net/forum?id=2putHo5KVL">Does less hallucination mean less creativity? An empirical investigation in LLMs.</a></strong>
+          <div class="authors"><strong>Banerjee M.</strong>, Wangsajaya, N. Y., Alsagoff, S. A. R., Tan, M. S., Choy, Z. K. C., Chan, A.</div>
+      
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="publication-text">
         <div class="date">Proceedings of the Workshop on Detection and Classification of Acoustic Scenes and Events (DCASE
 2025)</div>
         <div class="description">
