--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">AAAI 2026 Workshop on AI for Scientific Research</div>
         <div class="description">
-          <strong><a href="https://openreview.net/forum?id=2putHo5KVL">Does less hallucination mean less creativity? An empirical investigation in LLMs.</a></strong>
+          <strong><a href="https://arxiv.org/abs/2512.11509">Does less hallucination mean less creativity? An empirical investigation in LLMs.</a></strong>
           <div class="authors"><strong>Banerjee M.</strong>, Wangsajaya, N. Y., Alsagoff, S. A. R., Tan, M. S., Choy, Z. K. C., Chan, A.</div>
       
         </div>
