--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ section { scroll-margin-top: 80px; }
     <a class="brand" href="#">Mohor Banerjee</a>
     <div class="nav-links">
       <a href="#about">About</a>
-      <a href="#news">News</a>      
+      <a href="#news">Latest News</a>      
       <a href="#publications">Publications</a>
       <a href="#internships">Internships</a>
       <a href="#projects">Projects</a>
@@ -415,7 +415,7 @@ section { scroll-margin-top: 80px; }
 
 
 <section id="news">
-  <h2>News</h2>
+  <h2>Latest News</h2>
     <ul class="list">
       <li>
       <div class="publication-text">
